// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Margins All-Round Margin 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin--tiny"
    >
      container(tiny)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin--sm"
    >
      container(sm)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin--md"
    >
      container(md)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin--lg"
    >
      container(lg)
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins Double-Sided Margin Begin-End 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-begin-end--tiny"
    >
      container(tiny)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-begin-end--sm"
    >
      container(sm)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-begin-end--md"
    >
      container(md)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-begin-end--lg"
    >
      container(lg)
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins Double-Sided Margin Top-Bottom 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-top-bottom--tiny"
    >
      container(tiny)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-top-bottom--sm"
    >
      container(sm)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-top-bottom--md"
    >
      container(md)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-top-bottom--lg"
    >
      container(lg)
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins Double-Sided Negative Margin Begin-End 1`] = `
<div
  class="docs-column-flex docs-layout-margins-paddings--padded"
>
  
        
  <div
    class="fd-panel fd-panel--fixed fd-margin-negative-begin-end--tiny"
  >
    
            
    <div
      class="fd-panel__header"
    >
      
                
      <h1
        class="fd-panel__title"
        title="Panel header"
      >
        Panel header
      </h1>
      
            
    </div>
    
        
  </div>
  

        
  <div
    class="fd-panel fd-panel--fixed fd-margin-negative-begin-end--sm"
  >
    
            
    <div
      class="fd-panel__header"
    >
      
                
      <h1
        class="fd-panel__title"
        title="Panel header"
      >
        Panel header
      </h1>
      
            
    </div>
    
        
  </div>
  
        
  <div
    class="fd-panel fd-panel--fixed fd-margin-negative-begin-end--md"
  >
    
            
    <div
      class="fd-panel__header"
    >
      
                
      <h1
        class="fd-panel__title"
        title="Panel header"
      >
        Panel header
      </h1>
      
            
    </div>
    
        
  </div>
  
        
  <div
    class="fd-panel fd-panel--fixed fd-margin-negative-begin-end--lg"
  >
    
            
    <div
      class="fd-panel__header"
    >
      
                
      <h1
        class="fd-panel__title"
        title="Panel header"
      >
        Panel header
      </h1>
      
            
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins No Margin 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 docs-layout-margins-paddings--margin fd-margin--none"
    >
      container
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 docs-layout-margins-paddings--margin fd-margin-top--none"
    >
      container
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fddocs-margin-end-none fd-margin-end--none"
    >
      container
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 docs-layout-margins-paddings--margin fd-margin-bottom--none"
    >
      container
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fddocs-margin-end-none fd-margin-begin--none"
    >
      container
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins Responsive Margin 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-responsive--sm"
    >
      container(sm)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-responsive--md"
    >
      container(md)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-responsive--lg"
    >
      container(lg)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-responsive--xl"
    >
      container(xl)
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins Single-Sided Margin Begin 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-begin--tiny"
    >
      container(tiny)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13  fd-margin-begin--sm"
    >
      container(sm)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-begin--md"
    >
      container(md)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-begin--lg"
    >
      container(lg)
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins Single-Sided Margin Bottom 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-bottom--tiny"
    >
      container(tiny)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-bottom--sm"
    >
      container(sm)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-bottom--md"
    >
      container(md)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-bottom--lg"
    >
      container(lg)
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins Single-Sided Margin End 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-end--tiny"
    >
      container(tiny)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-end--sm"
    >
      container(sm)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-end--md"
    >
      container(md)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-end--lg"
    >
      container(lg)
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Margins Single-Sided Margin Top 1`] = `
<div
  class="docs-column-flex docs-column-flex--align-start"
>
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-top--tiny"
    >
      container(tiny)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-top--sm"
    >
      container(sm)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-top--md"
    >
      container(md)
    </div>
    
        
  </div>
  
        
  <br />
  
        
  <div
    class="docs-layout-margins-paddings--secondary-bg"
  >
    
            
    <div
      class="docs-layout-margins-paddings docs-layout-margins-paddings--width docs-layout-margins-paddings--color-13 fd-margin-top--lg"
    >
      container(lg)
    </div>
    
        
  </div>
  
    
</div>
`;
